--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,5 @@
+<background-video></background-video>
+
 <div class="section grey lighten-3">
     <div class="row container">
         <h2 class="header center">{{ translate("MAIN_QUOTE"); }}</h2>
