--- a/components/ListViewComponent/activitylist.view.html
+++ b/components/ListViewComponent/activitylist.view.html
@@ -1,1 +1,8 @@
-<div>allo</div>
+<table>
+    <tr>
+        <th>Activity</th>
+        <th>Description</th>
+        <th>Address</th>
+        <th></th>
+    </tr>
+</table>
