--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -1,5 +1,5 @@
 
-<nav class="grey darken-4" role="navigation">
+<nav class="transparent z-depth-0" role="navigation">
     <div class="nav-wrapper container" ng-controller="NavbarCtrl">
         <a id="logo-container" href="#" class="brand-logo"><i style="font-size: 4rem;" class="material-icons">book</i></a>
         <ul class="right hide-on-med-and-down">
