--- a/components/BackgroundVideoComponent/backgroundVideo.css
+++ b/components/BackgroundVideoComponent/backgroundVideo.css
@@ -1,11 +1,9 @@
 #backgroundVideoContainer{
-    position: fixed;
-    z-index: 0;
-    min-width: 100%;
-    min-height: 100%;
-    left: 0px; top: 0px;
-    overflow: hidden;
-    opacity: 1;
-    backface-visibility: hidden;
-    transition-property: opacity;
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
