--- a/components/BackgroundVideoComponent/backgroundVideo.view.html
+++ b/components/BackgroundVideoComponent/backgroundVideo.view.html
@@ -1,5 +1,2 @@
-<div id="backgroundVideoContainer">
-    <iframe id="mbYTP_bgndVideo" class="playerBox" style="position: absolute; z-index: 0; width: 1785.6px; height: 1080px; top: 0px; left: 0px; overflow: hidden; opacity: 1; margin-top: -349.5px; margin-left: -172.8px;" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/kwdwwoFI1Ts?autoplay=0&amp;modestbranding=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1&amp;version=3&amp;playerapiid=mbYTP_bgndVideo&amp;origin=http%3A%2F%2Fwww.creabox.es&amp;allowfullscreen=true&amp;wmode=transparent&amp;iv_load_policy=3&amp;html5=1&amp;widgetid=1">
-
-    </iframe>
-</div>
+<script src="http://www.youtube.com/player_api"></script>
+<div id="backgroundVideoContainer"></div>
