--- a/components/ListViewComponent/activitylist.css
+++ b/components/ListViewComponent/activitylist.css
@@ -11,6 +11,8 @@
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
+    margin: 5px;
+    width: 100px;
 
     position: absolute;
     z-index: 1;
@@ -18,4 +20,8 @@
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
+}
+
+.star-icon{
+    color: gold;
 }
