--- a/components/GridViewComponent/activitygrid.view.html
+++ b/components/GridViewComponent/activitygrid.view.html
@@ -3,7 +3,7 @@
 	  <div class="card">
 	    <div class="card-image">
 	      <img src="images/movies-card.jpg">
-	      <span class="card-title"><i class="material-icons" style="color:#DAA520;">star</i>{{category.name}}</span>
+	      <span class="card-title"><i class="material-icons" style="color:gold;">star_border</i>{{category.name}}</span>
 	    </div>
 	  </div>
 	</div>
