--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,2 @@
-<activity-list></activity-list>
+<activity-list ng-show="!openRedeemStars"></activity-list>
+<coupon-redeem ng-show="openRedeemStars"></coupon-redeem>
