fix on promotions

--- a/components/GridViewComponent/activitygrid.view.html
+++ b/components/GridViewComponent/activitygrid.view.html
@@ -17,7 +17,7 @@
             <i class="material-icons" style="color:gold;" ng-if="category.qtyPromotion > 0">&#xE83A;</i>
           </div>
           <h4>{{category.name}}</h4>
-          <p ng-if="category.qtyPromotion > 0">Hey! We found {{category.qtyPromotion}} that you could enfoy with your group of friends. Check it out!</p>
+          <p ng-if="category.qtyPromotion > 0">Hey! We found {{category.qtyPromotion}} deals that you could enjoy with your group of friends. Check it out!</p>
           <p ng-if="category.qtyPromotion <= 0">Sorry, no activities we're found in your area with a deal currently. Try to get more people together or check again later.</p>
         </div>
       </div>
